--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <img src="assets/delete.svg" alt="delete" />
         </button>
         <h4 class="book-author">Author Asdaa</h4>
+        <span>1 <img class="icon" src="assets/pages.svg" alt="pages" /></span>
         <select class="dropdown" name="status" id="status">
           <option value="to-read">To read</option>
           <option value="in-progres">In progress</option>
